@@ -15,9 +15,14 @@ Trunk - unreleased changes
 
   BUG FIXES
 
-    HIVE-387. Use URI from FileSystem Object instead of from HADOOPFS directly
     HIVE-381. Fix JDBC HiveResultSet's next function.
     (Kim P via namit)
+    
+    HIVE-387. Use URI from FileSystem Object instead of from HADOOPFS
+    directly. (jssarma)
+
+    HIVE-399. Fix timeout problems caused due to the bigdata test.
+    (Namit Jain via athusoo)
 
 Release 0.3.0 - Unreleased
 
